--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,17 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel='stylesheet' href='style.css'>
+  </head>
+  <body>
+    <div class='top'>
+    </div>
+    <div class='middle'>
+    </div>
+    <div class='bottom'>
+    </div>
+  </body>
+</html>
